Fixed Overlaping in Bootstrap Box

--- a/src/components/properties/properties/text/text.component.scss
+++ b/src/components/properties/properties/text/text.component.scss
@@ -4,6 +4,7 @@
     .dropdown-menu {
        right: 0;
        left: unset;
+       overflow: hidden;
        a {
            cursor: pointer;
            padding: 10px 15px;
